--- a/css/supplyinvoice.css
+++ b/css/supplyinvoice.css
@@ -6,6 +6,95 @@ body {
     color: #333;
 }
 
+.sidebar {
+    background-color: #f1f7f3 !important;
+    height: 91vh;
+    padding: 20px;
+    padding-top: 50px;
+    transition: margin-left 0.3s ease;
+}
+
+.sidebar a {
+    display: block;
+    color: #47925b;
+    text-decoration: none;
+    font-size: 12px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.sidebar a:hover {
+    background-color: #e4ebf1;
+    color: #86ec83;
+}
+
+.sidebar:hover {
+    margin-left: 0;
+}
+
+.content {
+    margin-left: 220px;
+    padding: 20px;
+}
+
+header {
+    background-color: #e4ebf1 !important;
+    color: #468a51;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0px !important;
+}
+
+header .logo {
+    font-size: 1.5rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+}
+
+header .logo img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+header .title {
+    font-size: 1.25rem;
+    font-weight: 500;
+    text-align: center;
+    flex-grow: 1;
+}
+
+header .user {
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+}
+
+header .user i {
+    margin-right: 10px;
+}
+
+header .user .notification {
+    margin-left: 15px;
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        margin-left: -220px;
+    }
+
+    .content {
+        margin-left: 0;
+    }
+
+    .sidebar:hover {
+        margin-left: 0;
+    }
+}
 .container {
     max-width: 1200px;
     margin: auto;
@@ -15,13 +104,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-header {
-    background-color: white !important;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-}
+
 
 h1 {
     font-size: 32px !important;
